--- a/UED_cg.html
+++ b/UED_cg.html
@@ -61,7 +61,7 @@ img.emoji {
 					<li id="menu-item-56" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-56"><a href="index.html">首页</a></li>
 <li id="menu-item-58" class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-58"><a href="UED_cg.html">成果</a></li>
 <li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-100"><a href="http://1dc.yqb.com/wp/?page_id=98">品牌</a></li>
-<li id="menu-item-62" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="http://1dc.yqb.com/wp/?page_id=60">我们</a></li>
+<li id="menu-item-62" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="UED_our.html">我们</a></li>
 <li id="menu-item-90" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-90"><a href="http://1dc.yqb.com/wp/?page_id=88">加入</a></li>
 <li id="menu-item-185" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-185"><a href="http://1dc.yqb.com/wp/?cat=4">会员之家</a></li>
 <li id="menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="http://1dc.yqb.com/wp/?page_id=92">资源下载</a></li>
@@ -82,7 +82,7 @@ img.emoji {
 				<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-56"><a href="index.html">首页</a></li>
 <li class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-58"><a href="UED_cg.html">成果</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-100"><a href="http://1dc.yqb.com/wp/?page_id=98">品牌</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="http://1dc.yqb.com/wp/?page_id=60">我们</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="UED_our.html">我们</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-90"><a href="http://1dc.yqb.com/wp/?page_id=88">加入</a></li>
 <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-185"><a href="http://1dc.yqb.com/wp/?cat=4">会员之家</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="http://1dc.yqb.com/wp/?page_id=92">资源下载</a></li>
@@ -1324,7 +1324,7 @@ img.emoji {
 
 		<p class="credits-left fleft">
 		
-			© 2017 1DC<span> —<a href="http://www.yqb.design/">YQB.DESIGN</a>  粤ICP备11100138号-5
+			© 2017 1DC<span> —<a href="http://www.yqb.design/">UED.DESIGN</a>  沪ICP备********号-1
 		
 		</span></p>
 		
