--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ img.emoji {
 <li id="menu-item-58" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-58"><a href="UED_cg.html">成果</a></li>
 <li id="menu-item-100" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-100"><a href="http://1dc.yqb.com/wp/?page_id=98">品牌</a></li>
 <li id="menu-item-62" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="UED_our.html">我们</a></li>
-<li id="menu-item-90" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-90"><a href="http://1dc.yqb.com/wp/?page_id=88">加入</a></li>
-<li id="menu-item-185" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-185"><a href="http://1dc.yqb.com/wp/?cat=4">会员之家</a></li>
+<li id="menu-item-90" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-90"><a href="UED_join.html">加入</a></li>
+<li id="menu-item-185" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-185"><a href="UED_vip.html">会员之家</a></li>
 <li id="menu-item-96" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="http://1dc.yqb.com/wp/?page_id=92">资源下载</a></li>
 											
 				 </ul> <!-- /main-menu -->
@@ -75,8 +75,8 @@ img.emoji {
 <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-58"><a href="UED_cg.html">成果</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-100"><a href="http://1dc.yqb.com/wp/?page_id=98">品牌</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62"><a href="UED_our.html">我们</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-90"><a href="http://1dc.yqb.com/wp/?page_id=88">加入</a></li>
-<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-185"><a href="http://1dc.yqb.com/wp/?cat=4">会员之家</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-90"><a href="UED_join.html">加入</a></li>
+<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-185"><a href="UED_vip.html">会员之家</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-96"><a href="http://1dc.yqb.com/wp/?page_id=92">资源下载</a></li>
 										
 			 </ul> <!-- /main-menu -->
