--- a/down/down.html
+++ b/down/down.html
@@ -24,11 +24,17 @@
   }  
 </script>
 	<style>
-		.down{width: 640px; height: 1138px; background: url(bg.png) no-repeat; margin: 0 auto;}
+		.down{width: 640px; height: 1138px; background: url(bg.png) no-repeat; margin: 0 auto; overflow: hidden;}
+		.down .but{margin-top: 866px; width: 480px; height: 150px; margin-left: 80px;}
+		.down .but1{width: 480px;height: 74px; cursor: pointer;}
+		.down .but2{width: 480px;height: 74px; cursor: pointer; margin-top: 31px;}
 	</style>
 <body>
 	<div class="down">
-		
+		<div class="but">
+			<a href=""><div class="but1"></div></a>
+			<a href=""><div class="but2"></div></a>
+		</div>
 	</div>
 </body>
 </html>
