--- a/UED_cg.html
+++ b/UED_cg.html
@@ -55,7 +55,7 @@ img.emoji {
 					<div class="clear"></div>
 					
 				</div>
-				<!--<ul class="dclogo" onclick="window.open(&#39;/wp&#39;,&#39;_self&#39;);"></ul>	-->	
+				<ul class="dclogo"></ul>
 				<ul class="main-menu">
 				
 					<li id="menu-item-56" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-56"><a href="index.html">首页</a></li>
@@ -91,7 +91,7 @@ img.emoji {
 		
 		</div> <!-- /mobile-navigation -->
 <div class="wrapper section medium-padding">
-
+	
   <div class="cg">
     <div class="cgnav">
          <ul>
