--- a/UED_down.html
+++ b/UED_down.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0033)http://1dc.yqb.com/wp/?page_id=92 -->
 <html lang="zh-CN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <script language="javascript" src="js/jquery.js"></script>
@@ -259,13 +258,13 @@ img.emoji {
 
 		<p class="credits-left fleft">
 		
-			© 2017 1DC<span> —<a>UED.DESIGN</a>  沪ICP备********号-1
+			© 2017 UED<span> —<a>UED.DESIGN</a>  沪ICP备********号-1
 		
 		</span></p>
 		
 		<p class="credits-right fright">
 			
-			<span>壹钱包官方体验中心—</span><a class="tothetop" title="To the top" href="http://1dc.yqb.com/wp/?page_id=92#">Up ↑</a>
+			<span>上海UED团队—</span><a class="tothetop" title="To the top" href="http://1dc.yqb.com/wp/?page_id=92#">Up ↑</a>
 			
 		</p>
 		
